# Fummins-Gauge

FumminsCluster/: CMakeLists.txt  GaugeFace.qml  GaugeNeedle.qml  LCDPlate.qml  Main.qml  RoundGauge.qml  SimData.qml  SimData.qml.autosave  TelltaleIcon.qml  main.cpp
